[gd_scene load_steps=6 format=3 uid="uid://c2puurpqryu8j"]

[ext_resource type="Script" uid="uid://42v837fkdqcg" path="res://Scripts/Laser.gd" id="1_c4r1g"]
[ext_resource type="PackedScene" uid="uid://cro04y024dvii" path="res://end_particles.tscn" id="2_6vqwg"]
[ext_resource type="PackedScene" uid="uid://chv7fu7pnloo8" path="res://beam_particles.tscn" id="3_g6b45"]

[sub_resource type="CylinderMesh" id="CylinderMesh_7vjml"]
flip_faces = true
top_radius = 0.03
bottom_radius = 0.03
height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7vjml"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0

[node name="Laser" type="RayCast3D"]
script = ExtResource("1_c4r1g")

[node name="BeamMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_7vjml")
surface_material_override/0 = SubResource("StandardMaterial3D_7vjml")

[node name="EndParticles" parent="." instance=ExtResource("2_6vqwg")]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="BeamParticles" parent="." instance=ExtResource("3_g6b45")]
